--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
         </p>
         <a href="#" class="button link">Call To Action</a>
       </section>
+      <section class="circle-container">
+        <div class="pink-circle"></div>
+        <div class="orange-circle"></div>
+        <div class="purple-circle"></div>
+      </section>
     </main>
     <footer class="footer">
       <a href="#" class="company footer-company">chirpus inc.</a>
